force-app/main/default/objects/Review_Scorecard__c/Review_Scorecard__c.object-meta.xml
<CustomObject>
    <label>Review Scorecard</label>
    <nameField>
        <displayFormat>SC-{0000000}</displayFormat>
        <label>Review Scorecard #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Review Scorecards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>