force-app/main/default/objects/Review_Scorecard__c/fields/Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Eligibility__c</fullName>
    <inlineHelpText>Group 1: Impact
How well does this applicant meet the eligibility requirements for this funding program?</inlineHelpText>
    <label>Eligibility</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>