force-app/main/default/objects/Review_Scorecard__c/fields/Experience__c.field-meta.xml
<CustomField>
    <fullName>Experience__c</fullName>
    <inlineHelpText>Group 3: Implementation
Does the applying organization demonstrate the expertise needed to achieve the program goal?</inlineHelpText>
    <label>Experience</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>