force-app/main/default/objects/Review_Scorecard__c/fields/Final_Score__c.field-meta.xml
<CustomField>
    <fullName>Final_Score__c</fullName>
    <formula>Impact_Score__c +  Implementation_Score__c +  Innovation_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>