force-app/main/default/objects/Review_Scorecard__c/fields/Implementation_Score__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Score__c</fullName>
    <formula>Implementation_Strategy__c +  Timeline__c +  Experience__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Implementation Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>