force-app/main/default/objects/Review_Scorecard__c/fields/Implementation_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Strategy__c</fullName>
    <inlineHelpText>Group 3: Implementation
How effective is the proposed implementation strategy?</inlineHelpText>
    <label>Implementation Strategy</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>