force-app/main/default/objects/Review_Scorecard__c/fields/Innovation__c.field-meta.xml
<CustomField>
    <fullName>Innovation__c</fullName>
    <inlineHelpText>Group 2: Innovation
Does this applicant introduce significant innovation to achieve the goals of this program?</inlineHelpText>
    <label>Innovation</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>