force-app/main/default/objects/Review_Scorecard__c/fields/Innovation_Score__c.field-meta.xml
<CustomField>
    <fullName>Innovation_Score__c</fullName>
    <formula>Innovation__c +  Technology__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Out of 20</inlineHelpText>
    <label>Innovation Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>