force-app/main/default/objects/Review_Scorecard__c/fields/Meets_Program_Objectives__c.field-meta.xml
<CustomField>
    <fullName>Meets_Program_Objectives__c</fullName>
    <inlineHelpText>Group 1: Impact
Does this grant application address the primary objectives of the program?</inlineHelpText>
    <label>Meets Program Objectives</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>