force-app/main/default/objects/Review_Scorecard__c/fields/Review__c.field-meta.xml
<CustomField>
    <fullName>Review__c</fullName>
    <label>Review</label>
    <referenceTo>outfunds__Requirement__c</referenceTo>
    <relationshipLabel>Review Scorecards</relationshipLabel>
    <relationshipName>Review_Scorecards</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>