force-app/main/default/objects/Review_Scorecard__c/fields/Serves_Intended_Population__c.field-meta.xml
<CustomField>
    <fullName>Serves_Intended_Population__c</fullName>
    <inlineHelpText>Group 1: Impact
Does this application serve the intended location and/or population?</inlineHelpText>
    <label>Serves Intended Location or Population</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>