force-app/main/default/objects/Review_Scorecard__c/fields/Technology__c.field-meta.xml
<CustomField>
    <fullName>Technology__c</fullName>
    <inlineHelpText>Group 2: Innovation
Will this applicant leverage effective technology to achieve the goals of this program?</inlineHelpText>
    <label>Technology</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>