force-app/main/default/objects/Review_Scorecard__c/fields/Timeline__c.field-meta.xml
<CustomField>
    <fullName>Timeline__c</fullName>
    <inlineHelpText>Group 3: Implementation
Does the proposed timeline fit the desired program goal dates?</inlineHelpText>
    <label>Timeline</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>